[package]
name = "cluster-cost"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
clap = "2.33"
structopt = "0.3.8"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
run_script = "0.6.2"
sys-info = "0.5.9"

[dependencies]
structopt = "0.3.8"
dirs = "2.0.2"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_debug"] }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_yaml = "0.8.11"
serde_json = "1.0.48"
dialoguer = "0.5.0"
console = "0.9.2"
regex = "1.3.4"
run_script = "0.6.2"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix_derive = "0.5.0"
env_logger = "0.7.1"
prettytable-rs = "0.8.0"
serde-value = "0.6.0"
